<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradiant"
    tools:context=".GameOverActivity">

    <Button
        android:id="@+id/menuButton"
        android:layout_width="196dp"
        android:layout_height="58dp"
        android:text="@string/button_menu"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        app:icon="@drawable/image_rouage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="195dp"
        android:layout_height="56dp"
        android:text="@string/button_quit"
        android:textSize="20sp"
        android:backgroundTint="@color/red"
        android:fontFamily="sans-serif-condensed"
        app:icon="@drawable/image_croix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <TextView
        android:id="@+id/TextView_gameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:allowUndo="false"
        android:text="@string/textView_gameOver"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />

    <Button
        android:id="@+id/retrayButton"
        android:layout_width="194dp"
        android:layout_height="47dp"
        android:text="@string/button_retray"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        app:icon="@drawable/apple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_points"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

</androidx.constraintlayout.widget.ConstraintLayout>